assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto+Slab:wght@100..900&display=swap");

/* Asterisk */
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

/* General styles */
body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  color: #606c38;
  font-family: "Nunito", sans-serif;
}
h1,
h2,
h3 {
  font-family: "Roboto Slab", serif;
  letter-spacing: 2px;
  color: #023304;
}

/* Header */
header {
  background-color: #faf9f6;
  padding: 0 1rem;
  position: fixed;
  z-index: 99;
  width: 100%;
  box-shadow: 0 2px 2px #3a3a3a;
  display: flex;
  justify-content: space-between;
  align-items: baseline;
}

header a {
  text-decoration: none;
  color: inherit;
}

#nav-bar {
  font-size: 100%;
  letter-spacing: 3px;
  list-style-type: none;
  margin-bottom: 20px;
  color: #283618;
}
#nav-bar > li {
  margin-bottom: 1em;
}
.active {
  border-bottom: 1px solid lightgray;
}
/* Nav-bar styles with drop-down toggle*/
nav {
  position: absolute;
  background-color: #faf9f6;
  width: 100%;
  left: 0;
  padding: 0 1rem;
  box-shadow: 0 2px 2px #3a3a3a;
  display: none;
  top: 100%;
}
/* Nav-toggle */
#nav-toggle:checked ~ nav {
  display: block;
}
#nav-toggle {
  display: none;
}
.nav-toggle-label {
  font-size: 2rem;
}

/* Main Conent */
main {
  flex: 1 0 auto;
  margin-top: 47px;
}
/* Main-photo styles */
#main-photo {
  height: 600px;
  width: 100vw;
  background: url(../images/Optimized-pexels-johann-1254140.jpg) no-repeat
    center center/cover;
}
#cover-text {
  background-color: rgba(255, 255, 255, 0.8);
  font-size: 130%;
  position: absolute;
  top: 525px;
  right: 0px;
  width: 80%;
  min-height: 100px;
  margin: 0;
  padding: 0;
}
/* About */
#about p {
  padding: 0 15px;
}
#about hr {
  border-top: 1px solid #3a3a3a;
  margin: 5px 0;
}
/* Services */
#services {
  position: relative;
  height: 400px;
  width: 100vw;
  padding: 0 1rem;
  color: #606c38;
  margin-bottom: 400px;
}

#services p {
  padding: 0 15px;
}
#services hr {
  border-top: 1px solid #3a3a3a;
  margin: 5px 0;
}
/* Video section */

#video {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}
#video-1 {
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  margin-top: 50px;
  border-radius: 8px;
  overflow: hidden;
}
#video h2 {
  margin-top: -325px;
}
/* Products */
#products {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin-top: 3rem;
}
#product-container {
  display: flex;
  justify-content: center;
  gap: 50px;
  /* margin-top: 4rem; */
  margin-bottom: 10rem;
}
#products > h2 {
  margin-bottom: 20px;
}
/* Harness Product */
#harness img {
  margin-bottom: 20px;
  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
  border-radius: 15px;
}
.harness {
  display: block;
  width: 200px;
  height: 200px;
}
#harness a {
  color: #ffffff;
  background-color: #283618;
  border-color: #283618;
  display: inline-block;
  padding: 10px 20px;
  border-radius: 20px;
  text-decoration: none;
}
/* Dog Lead Product */
#dog-lead img {
  margin-bottom: 20px;
  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
  border-radius: 15px;
}
.dog-lead {
  display: block;
  width: 200px;
  height: 200px;
}
#dog-lead a {
  color: #ffffff;
  background-color: #283618;
  border-color: #283618;
  display: inline-block;
  padding: 10px 20px;
  border-radius: 20px;
  text-decoration: none;
}
/* Poo-Bag Product */

#poo-bag img {
  margin-bottom: 20px;
  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px,
    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
    rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
  border-radius: 15px;
}
.poo-bag {
  display: block;
  width: 200px;
  height: 200px;
}
#poo-bag a {
  color: #ffffff;
  background-color: #283618;
  border-color: #283618;
  display: inline-block;
  padding: 10px 20px;
  border-radius: 20px;
  text-decoration: none;
}
/* Gallery Page*/
#photos img {
  width: 100%;
  line-height: 1em;
}
#photos {
  line-height: 0;
}
/* Contact Page */
/* #dog-line img {
  display: flex;
  position: absolute;
  bottom: 65px;
  left: 50%;
  transform: translateX(-50%);
  width: 65%;
  align-items: center;
} */
@import url("https://fonts.googleapis.com/css?family=Exo:400,700");

* {
  margin: 0px;
  padding: 0px;
}

body {
  font-family: "Exo", sans-serif;
}

.context {
  width: 100%;
  position: absolute;
  top: 50vh;
}

.context h1 {
  text-align: center;
  color: #fff;
  font-size: 50px;
}

.area {
  background: #faf9f6;
  background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
  width: 100%;
  height: 100%;
}

.circles {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.circles li {
  position: absolute;
  display: block;
  list-style: none;
  width: 20px;
  height: 20px;
  background: #283618;
  animation: animate 25s linear infinite;
  bottom: -150px;
}

.circles li:nth-child(1) {
  left: 25%;
  width: 80px;
  height: 80px;
  animation-delay: 0s;
}

.circles li:nth-child(2) {
  left: 10%;
  width: 20px;
  height: 20px;
  animation-delay: 2s;
  animation-duration: 12s;
}

.circles li:nth-child(3) {
  left: 70%;
  width: 20px;
  height: 20px;
  animation-delay: 4s;
}

.circles li:nth-child(4) {
  left: 40%;
  width: 60px;
  height: 60px;
  animation-delay: 0s;
  animation-duration: 18s;
}

.circles li:nth-child(5) {
  left: 65%;
  width: 20px;
  height: 20px;
  animation-delay: 0s;
}

.circles li:nth-child(6) {
  left: 75%;
  width: 110px;
  height: 110px;
  animation-delay: 3s;
}

.circles li:nth-child(7) {
  left: 35%;
  width: 150px;
  height: 150px;
  animation-delay: 7s;
}

.circles li:nth-child(8) {
  left: 50%;
  width: 25px;
  height: 25px;
  animation-delay: 15s;
  animation-duration: 45s;
}

.circles li:nth-child(9) {
  left: 20%;
  width: 15px;
  height: 15px;
  animation-delay: 2s;
  animation-duration: 35s;
}

.circles li:nth-child(10) {
  left: 85%;
  width: 150px;
  height: 150px;
  animation-delay: 0s;
  animation-duration: 11s;
}

@keyframes animate {
  0% {
    transform: translateY(0) rotate(0deg);
    opacity: 1;
    border-radius: 0;
  }

  100% {
    transform: translateY(-1000px) rotate(720deg);
    opacity: 0;
    border-radius: 50%;
  }
}
/* Footer*/
footer {
  background-color: #faf9f6;
  z-index: 1;
}
#social-networks {
  text-align: center;
  padding: 20px 0;
  display: flex;
  justify-content: space-evenly;
  list-style-type: none;
}
#social-networks a {
  font-size: 160%;
  padding: 5%;
  color: #283618;
  background-color: #faf9f6;
}
#social-networks a:hover {
  color: white;
  background-color: #283618;
  border-radius: 50%;
}
.offer {
  position: relative;
  top: 20px;
}
#dog-walking {
  position: relative;
  top: 40px;
}
#sg-walks {
  position: relative;
  top: 55px;
}
#pet-trans {
  position: relative;
  top: 70px;
}
#senior-care {
  position: relative;
  top: 85px;
}
/* Media query: large or landscape phones (576px +)*/
@media screen and (min-width: 576px) {
  #photos {
    column-count: 2;
    column-gap: 0;
  }
}

/* Media query: tablets and larger (768px +) */
@media screen and (min-width: 768px) {
  /* Header */
  nav {
    display: block;
    position: relative;
    box-shadow: none;
    width: fit-content;
    padding-right: 1rem;
  }
  #nav-bar {
    display: flex;
  }
  #nav-bar > li {
    padding-left: 1rem;
  }
  .nav-toggle-label {
    display: none;
  }
  #logo {
    font-size: 200%;
    line-height: 75px;
    margin: 0 0.5rem;
  }
  /* Main content */
  main {
    margin-top: 79px;
    background-color: #faf9f6;
  }
  /* main-photo */
  #cover-text {
    width: 300px;
    right: 10px;
    top: 450px;
  }
  /* Gallery */
  #photos {
    column-count: 3;
  }
}
/* Large devices (laptops & desktops, 992px +) */
@media screen and (min-width: 922px) {
  #nav-bar a:hover {
    border-bottom: 1px solid lightgrey;
  }
  /* Gallery */
  #photos {
    display: grid;
    background-image: linear-gradient(
      to bottom,
      #faf9f6,
      #c5c3b7,
      #8f907c,
      #5b6147,
      #283618
    );
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 0px;
  }
  #photos img {
    width: 100%;
    height: 75%;
    object-fit: cover;
  }
}
/*
@media screen and (min-width: 280px) {
  #paw-image {
    display: none;
  }
}
*/

